move PopupMenu in own files and use it in WindowList
Now one can also move (drag&drop) a window from the WindowList Popup
to a different virtual desktop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(SOURCES
     DeviceList.cxx
     Battery.cxx
     Bluetooth.cxx
+    PopupMenu.cxx
 
     DesktopApplet.cxx
     WeatherApplet.cxx
