pkupdates all transactions when install clicked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ find_package(KF5 REQUIRED COMPONENTS
              NewStuff
 )
 
+find_package(packagekitqt5 REQUIRED)
+
 set(SOURCES
     desktop.cxx
     DesktopWidget.cxx
@@ -54,6 +56,8 @@ set(SOURCES
     Battery.cxx
     Bluetooth.cxx
     PopupMenu.cxx
+    PkUpdates.cxx
+    PkUpdateList.cxx
 
     DesktopApplet.cxx
     WeatherApplet.cxx
@@ -110,7 +114,9 @@ target_link_libraries(${TARGET}
                       KF5::ItemViews
                       KF5::Archive
                       KF5::NewStuff
+                      PK::packagekitqt5
 )
 
 install(TARGETS ${TARGET} ${INSTALL_TARGETS_DEFAULT_ARGS})
 install(PROGRAMS org.kde.${TARGET}.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+install(FILES liquidshell.notifyrc DESTINATION ${KNOTIFYRC_INSTALL_DIR})
