IconButton class to ensure positioning of icon and text is independent of the style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCES
     StartMenu.cxx
     Launcher.cxx
     QuickLaunch.cxx
+    IconButton.cxx
     AppMenu.cxx
     Pager.cxx
     PagerButton.cxx
