--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,9 @@ endif()
 
 install(TARGETS ${TARGET} ${INSTALL_TARGETS_DEFAULT_ARGS})
 install(FILES org.kde.${TARGET}.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install(PROGRAMS start_liquidshell DESTINATION ${KDE_INSTALL_BINDIR})
+
+configure_file(start_liquidshell start_liquidshell @ONLY)
+install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/start_liquidshell DESTINATION ${KDE_INSTALL_BINDIR})
 
 install(FILES liquidshell.notifyrc DESTINATION ${KNOTIFYRC_INSTALL_DIR})
 
