OnScreenBrightness, MouseWheel on Pager to change desktops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES
     DesktopWidget.cxx
     DesktopPanel.cxx
     OnScreenVolume.cxx
+    OnScreenBrightness.cxx
     ConfigureDesktopDialog.cxx
     StartMenu.cxx
     Launcher.cxx
