--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,9 @@
 ---
+Version: 1.8.1
+Date: 2022-07-26
+Description:
+- Bugfixes and adjustments to newer KDE components
+---
 Version: 1.8
 Date: 2021-12-01
 Description:
