--- a/NEWS.yaml
+++ b/NEWS.yaml
@@ -1,4 +1,17 @@
 ---
+Version: 1.10.1
+Date: 2026-01-03
+Description:
+- Fix stray Notification Item showing up
+- kdeconnect no longer uses a KCM module for configuration, but an app
+- Add workaround for weird behavior when opening some configure Dialogs
+- Also allow symlinks in QuickLaunch
+---
+Version: 1.10
+Date: 2024-10-05
+Description:
+- Port to Qt6/KDE6
+---
 Version: 1.9
 Date: 2023-07-25
 Description:
